tests/compile_errors/json/008_strict_type_extend_fail.xr
// 008_strict_type_extend_fail.xr
// 错误测试：严格类型不允许添加任何新字段（多个尝试）
// 期望错误：类型 'Rectangle' 不允许添加字段
let rect: {width,height} = { "width": 100, "height": 50 }
rect.color = "red"
